Fixed Letter Spacing

--- a/src/app.css
+++ b/src/app.css
@@ -23,7 +23,7 @@ body > div {
     font-family: 'SFProText', serif;
     -webkit-tap-highlight-color: transparent;
     box-sizing: border-box;
-    letter-spacing: -0.45px
+    letter-spacing: -0.48px
 }
 
 /*
